# airflow_keda_article

./: .gitignore  README.md
airflow_chart_1_15_0/chart/templates/triggerer/: triggerer-kedaautoscaler.yaml
airflow_chart_1_15_0/chart/templates/workers/: worker-kedaautoscaler.yaml
airflow_custom_plugin/: Dockerfile  pyproject.toml
airflow_custom_plugin/airflow_custom_plugin/: pg_override_plugin.py
airflow_custom_plugin/dags/: simple_dag.py
helm_values/: airflow_values.yaml  keda_values.yaml
k8s_manifest_files/: keda_cluster_trigger_auth.yaml  storage_class_logs.yaml
sql_script/: airflow_aad.sql
terraform/: aks.tf  postgres_flex.tf  providers.tf  resource_group.tf  storage_account.tf  uami.tf  variables.tf
terraform/tfvars/: template.tfvars
